syntax = "proto3";
package universal;

option go_package = "universal/common/pb";

import "packet.proto";

// 登录协议
message LoginRequest {
    string Token = 1;  // token
}

message LoginResponse {
    RspHead Head = 1;  // 协议头
}

message HeartRequest {
    int64 Utc       = 1;  // UTC时区
    int64 BeginTime = 2;  // 请求时间
}

message HeartResponse {
    RspHead Head      = 1;  // 协议头
    int64   Utc       = 2;  // UTC时区
    int64   BeginTime = 3;  // 请求时间
    int64   EndTime   = 4;  // 响应时间
}
